--- a/src/components/CampaignInfo.css
+++ b/src/components/CampaignInfo.css
@@ -47,7 +47,7 @@
 	flex: 1;
 }
 
-.CampaignInfo-donate input {
+.CampaignInfo-donate input, select {
 	padding: 1rem;
 	font-size: 1.2em;
 	border-radius: 6px;
