--- a/src/components/UserBalance.css
+++ b/src/components/UserBalance.css
@@ -10,6 +10,14 @@
 	line-height: 1;
 }
 
+.ProfileImage {
+	padding: .6rem;
+}
+
+.ProfileName {
+	padding: .6rem;
+}
+
 .UserBalance-amount {
 	color: rgb(248, 5, 126);
 	font-weight: bold;
